<resources>
    <string name="app_name">PetPetFairy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">通知</string>
    <string name="title_notifications_null">暫時沒有捐贈</string>
    <string name="notification_detail_image">http://35.241.89.109/Petpetfairy-1-0.0.1-SNAPSHOT/notification.jpg</string>
    <string name="about_us_title">關於我們</string>
    <string name="about_us_detail_1">    PetpetFairy APP是致力於幫助等待領養的寵物，希望能盡快找到一個愛它們的家。</string>
    <string name="about_us_detail_2">PetpetFairy會將你們瀏覽所獲得的廣告收益捐贈予寵物收容機構或者個人。</string>
    <string name="about_us_detail_3">希望他們能繼續給流離失所的寵物提供暫時的居所。</string>
    <string name="about_us_detail_4">捐贈對象將會是每期瀏覽數最多的寵物收容機構或者個人。</string>
    <string name="about_us_detail_5">捐贈金額將是APP運營費用以外的所以廣告收入。</string>
    <string name="about_us_detail_6">所有的捐贈明細會每期上傳到APP中。</string>
</resources>